# GravitySimulatorPrototype

./: .gitignore  CMakeLists.txt  GravitySimulatorPrototype.sln  mistakes  railpack.json
GravitySimulatorPrototype/: EndBrace.h  GravitySimulatorPrototype.vcxproj  GravitySimulatorPrototype.vcxproj.filters  Text.txt  fix.py  fmm_D.cpp  fmm_rewrite_log.md  gen_fmm.py  gravsim.cpp  livyu.cpp  main.cpp  output.txt  patch.py  physics.cpp  physics1.cpp  physics2.cpp  physics_review.md  sim  test  test_fmm  test_fmm.cpp  test_fmm2  test_fmm2.cpp  test_recurrence  test_recurrence.cpp
OpenGL/: a  applicationclass.cpp  makefile  opengl_incomplete_walkthrough.md  openglclass.h
OpenGL/Engine/: applicationclass.h  client  openglclass.cpp
OpenGL/res/shaders/: Basic.shader
OpenGL/src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
RaylibDemo/: main.cpp
